--- a/homeWorks/task1/css/style.css
+++ b/homeWorks/task1/css/style.css
@@ -47,6 +47,7 @@ button{
     background-color: black;
     height: 50px;
     width: 100%;
+    box-sizing: border-box;
 }
 .block{
     width: 80%;
