--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,8 @@ button{
 }
 .header{
     background-color: black;
-    height: 40px;
+    height: 50px;
     text-align: center;
-    padding-top: 10px;
     box-sizing: border-box;
 }
 .footer{
@@ -61,6 +60,7 @@ button{
     background-color: white;
     text-align: center;
     color: #2083df;
+    overflow-y: auto;
 }
 .left{
     left: 5vw;
