new changings using map

--- a/homeWorks/task2/css/style.css
+++ b/homeWorks/task2/css/style.css
@@ -37,7 +37,7 @@ button{
 }
 .mainBlock{
     background-image: url(../img/main.jpg);
-    min-height: 500px;
+    min-height: calc(100vh - 100px);
 }
 .header{
     background-color: black;
