--- a/homeWorks/task4/src/css/style.css
+++ b/homeWorks/task4/src/css/style.css
@@ -85,10 +85,89 @@ button{
     position: relative;
     left: 15%;
 }
+.user{
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.users{
+    height:35%;
+    border: 1px solid grey;
+    margin-top: 10px;
+    overflow-y: auto;
+    padding: 5px;
+    box-sizing: border-box;
+}
+.userInfo{
+    height: 25%;
+    border: 1px solid grey;
+    margin-top: 10px;
+    overflow-y: auto;
+    padding: 5px;
+}
+.back{
+    color: #2083df;
+    position: absolute;
+    left: 10px;
+    cursor: pointer;
+}
+.progress {
+    position: relative;
+    height: 4px;
+    display: block;
+    width: 100%;
+    background-color: #bbdefb;
+    border-radius: 2px;
+    margin: .5rem 0 1rem 0;
+    overflow: hidden;
+}
+
+.progress .indeterminate {
+    background-color: #1565c0;
+}
+.progress .indeterminate:before {
+    content: '';
+    position: absolute;
+    background-color: inherit;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    will-change: left, right;
+    -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+    animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+}
+.progress .indeterminate:after {
+    content: '';
+    position: absolute;
+    background-color: inherit;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    will-change: left, right;
+    -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+    animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+
 @media (max-height: 320px) {
     .mainBlock{
      height: 350px;
     }
 }
+
+@keyframes indeterminate-short {
+    0% {
+      left: -200%;
+      right: 100%;
+    }
+    60% {
+      left: 107%;
+      right: -8%;
+    }
+    100% {
+      left: 107%;
+      right: -8%;
+    }
+  }
 
 
